--- a/准备.md
+++ b/准备.md
@@ -59,6 +59,8 @@ https://www.liaoxuefeng.com/wiki/896043488029600/900937935629664
 - 其他
 
   见Typora工具栏的段落
-
+## javaparser
+- 官方文档
+  https://github.com/javaparser/javaparser
 
 
